--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy":"gh-pages -d build",
-    "predeploy":"npm run build"
-  },
+    "predeploy":"npm run build"},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -54,5 +53,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24"
   },
-  "homepage": " https://chaghantak/github.io/CoinReact"
+  "homepage": " https://chaghantak.github.io/CoinReact/"
 }
